# blog-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  nginx.conf.template  railway.toml  table_mysql.sql  table_pg.sql
.github/workflows/: builds.yml  rust.yml  tests.yml
blog-generic/: Cargo.toml
blog-generic/src/: author_slug_utils.rs  lib.rs  page_processor.rs
blog-generic/src/entities/: author.rs  author_container.rs  authors_container.rs  base_items_container.rs  chat.rs  comment.rs  login.rs  (+13 more)
blog-server-api/: Cargo.toml
blog-server-api/src/: extensions.rs  main.rs  router.rs
blog-server-api/src/endpoints/: client_handler.rs  mod.rs  sitemap_handler.rs
blog-server-api/src/endpoints/author/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/author_block/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/author_me/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/author_override_social_data/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/author_subscribe/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/authors/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/chat/: handler.rs  request_content.rs  response_content_success.rs
blog-server-api/src/endpoints/chatgpt/: handler.rs  request_content.rs  response_content_failure.rs
blog-server-api/src/endpoints/comments/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/create_comment/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/create_post/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/delete_comment/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/delete_image/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/delete_post/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/login/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/me/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/post/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/post_pool/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/post_recommendation/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/post_update_recommended/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/posts/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/tag/: handler.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/telegram_login/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/update_minimal_author/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/update_post/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/update_secondary_author/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/endpoints/upload_image/: handler.rs  middleware.rs  mod.rs  request_content.rs  response_content_failure.rs  response_content_success.rs  types.rs
blog-server-api/src/endpoints/yandex_login/: handler.rs  request_content.rs  response_content_failure.rs  response_content_success.rs
blog-server-api/src/entities/: author.rs  comment.rs  create_post.rs  mod.rs  post.rs  post_request_data.rs  tag.rs
blog-server-api/src/migrations/: base.rs  content.rs  content_formatting.rs  mod.rs  seed_placeholder_ru.rs  table_pg.sql
blog-server-api/src/utils/: auth.rs  html.rs  jwt.rs  login.rs  mod.rs  password.rs  time_utils.rs
blog-server-services/: Cargo.toml
blog-server-services/src/: lib.rs
blog-server-services/src/impls/: discord_new_post_published_service.rs  entity_comment_service.rs  entity_post_service.rs  mod.rs  rabbitmq_event_bus_service.rs  rbatis_author_service.rs  rbatis_comment_service.rs  rbatis_post_service.rs  social_service.rs  telegram_new_post_published_service.rs  telegram_updates_service.rs  telegram_user_updates_service.rs
blog-server-services/src/instances/: mod.rs  rbatis_author_service.rs  rbatis_post_service.rs  rbatis_user_service.rs
blog-server-services/src/traits/: author_service.rs  comment_service.rs  entity_comment_service.rs  entity_post_service.rs  event_bus_service.rs  mod.rs  post_service.rs  social_service.rs  user_service.rs
blog-server-services/src/utility/: transliteration.rs
blog-server-services/src/utils/: discord_webhook_request.rs  html.rs  image_signer.rs  map_in_pattern.rs  mod.rs  string_filter.rs  telegram_send_message_request.rs  time_utils.rs  transliteration.rs
deploy/: delete_old_nginx.py  deploy_linux_daemon.yml  main_playbook.yml  prepare_repo.yml  server_cargo_edit.py  template_blog.service.j2  tikitko_blog.service.j2  ui_cargo_edit.py  vars.yml
(+3 files in other folders)
