[package]
name = "blog-server-api"
version = "0.0.1"
edition = "2021"

[features]
ssr = ["blog-ui", "serde_json", "sitemap-rs"]

[dependencies.screw-components]
git = "https://github.com/Tikitko/screw.git"
#path = "../../screw/screw-components"
package = "screw-components"

[dependencies.screw-core]
git = "https://github.com/Tikitko/screw.git"
#path = "../../screw/screw-core"
package = "screw-core"

[dependencies.screw-api]
git = "https://github.com/Tikitko/screw.git"
#path = "../../screw/screw-api"
package = "screw-api"
features = ["json"]

[dependencies.screw-ws]
git = "https://github.com/Tikitko/screw.git"
#path = "../../screw/screw-ws"
package = "screw-ws"

[dependencies.blog-ui]
git = "https://github.com/Tikitko/blog-ui.git"
#path = "../../blog-ui"
default-features = false
features = ["server"]
optional = true

[dependencies]
blog-generic = { path = "../blog-generic" }
blog-server-services = { path = "../blog-server-services" }
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.104", optional = true }
rbs = { version = "4.3" }
rbatis = { version = "4.3" }
rbdc-pg = { version = "4.3" }
async-trait = { version = "0.1.68" }
password-hash = "0.5.0"
argon2 = "0.5.0"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
chrono = "0.4.29"
sitemap-rs = { version = "0.2.0", optional = true }
validator = { version = "0.16.1" }