[package]
name = "blog-server-api"
version = "0.0.2"
edition = "2024"

[features]
ssr = ["blog-ui", "sitemap-rs"]
yandex = ["reqwest", "blog-ui?/yandex"]
telegram = ["sha2", "hmac", "hex", "blog-ui?/telegram"]
chatgpt = ["uuid", "blog-ui?/chatgpt", "async-openai"]

[dependencies.screw-components]
git = "https://github.com/Tikitko/screw.git"
tag = "0.0.2"
#path = "../../screw/screw-components"
package = "screw-components"

[dependencies.screw-core]
git = "https://github.com/Tikitko/screw.git"
tag = "0.0.2"
#path = "../../screw/screw-core"
package = "screw-core"

[dependencies.screw-api]
git = "https://github.com/Tikitko/screw.git"
tag = "0.0.2"
#path = "../../screw/screw-api"
package = "screw-api"
features = ["json"]

[dependencies.screw-ws]
git = "https://github.com/Tikitko/screw.git"
tag = "0.0.2"
#path = "../../screw/screw-ws"
package = "screw-ws"

[dependencies.blog-ui]
git = "https://github.com/Tikitko/blog-ui.git"
#path = "../../blog-ui"
default-features = false
features = ["server"]
optional = true

[dependencies.blog-generic]
git = "https://github.com/brewpipeline/blog-generic.git"
tag = "0.0.2"
features = ["validator"]

[dependencies]
blog-server-services = { path = "../blog-server-services" }
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.104" }
rbs = { version = "4.5.2" }
rbatis = { version = "4.5.7" }
rbdc-pg = { version = "4.5.2" }
async-trait = { version = "0.1.68" }
password-hash = "0.5.0"
argon2 = "0.5.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
once_cell = "1.18.0"
chrono = "0.4.29"
sitemap-rs = { version = "0.4.0", optional = true }
validator = { version = "0.16.1" }
reqwest = { version = "0.13.1", features = ["json"], optional = true }
sha2 = { version = "0.10.0", optional = true }
hmac = { version = "0.12.1", optional = true }
hex = { version = "0.4.3", optional = true }
config = "0.15.6"
uuid = { version = "1.18.0", features = ["std", "v4"], optional = true }
async-openai = { version = "0.32.4", features = ["chat-completion"], optional = true }
