[package]
name = "blog-server-services"
version = "0.0.1"
edition = "2021"

[dependencies.screw-components]
git = "https://github.com/Tikitko/screw.git"
#path = "../../screw/screw-components"
package = "screw-components"

[dependencies]
blog-generic = { path = "../blog-generic" }
rbs = { version = "4.5.2" }
rbatis = { version = "4.5.7" }
amqprs = { version = "1.5.1", features = ["urispec"] }
async-trait = { version = "0.1.68" }
serde = { version = "1.0.160", features = ["derive"] }
serde_repr = { version = "0.1.12" }
serde_json = { version = "1.0.96" }
translit = { version = "0.5.0" }
ammonia = "3.3.0"
html2text = "0.9.0"
reqwest = { version = "0.11.20", features = ["json"] }