[package]
name = "blog-server-services"
edition = "2024"

[dependencies.screw-components]
git = "https://github.com/Tikitko/screw.git"
tag = "0.0.2"
#path = "../../screw/screw-components"
package = "screw-components"

[dependencies.blog-generic]
git = "https://github.com/brewpipeline/blog-generic.git"
tag = "1.0.0"

[features]
default = []
lang_ru = []
lang_en = []

[dependencies]
rbs = { version = "=4.7" }
rbatis = { version = "=4.7" }
amqprs = { version = "2.1.3", features = ["urispec"] }
async-trait = { version = "0.1.68" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96" }
translit = { version = "0.6.0" }
ammonia = "4.1.2"
html2text = "0.9.4"
reqwest = { version = "0.13.1", features = ["json"] }
base64 = { version = "0.22" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
hex = { version = "0.4" }